--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     
     <script src="javascript.js"></script>
 
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
 </body>
 </html>
