Add div to track scores

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
 
+    <!--This is used to store the score results, manipulated by JS code-->
+    <div id="scoreTracker"></div>
 </body>
 </html>
