--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
-    
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
+    <div id="container"></div>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
 
     <!--This is used to store the score results, manipulated by JS code-->
-    <div id="scoreTracker"></div>
+    <div id="scoresContainer"></div>
 </body>
 </html>
