--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div id="container">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <button id="rock"> <img src="./assets/rock.png" alt="rock image" height="100px"> </button>
+        <button id="paper"> <img src="./assets/paper.png" alt="paper image" height="100px"> </button>
+        <button id="scissors"> <img src="./assets/scissors.png" alt="scissors image" height="100px"> </button>
     </div>
 
     <!--This is used to store the score results, manipulated by JS code-->
